2005-05-21  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/driver.c: fixed coredump in NsStartDrivers() if the driver
	does not have the bindaddr defined (i.e. it is NULL).

2005-05-20  Vlad Seryakov  <seryakov@users.sf.net>

	* ns/include.h:
	* nsd/driver.c: added support for UDP and Unix domain sockets
	for HTTP over udp/unix sockets. Removed obsolete driver functions.

2005-05-16  Stephen Deasey  <sdeasey@users.sf.net>

	* aclocal.m4:
	* tcl.m4
	* configure.in:
	* configure:
	* include/Makefile.global.in:
	* include/Makefile.module.in: Include tc.m4 macros and convert to
	Tcl TEA build system.  Add messages to all autoconf feature
	tests.  Remove unneeded feature tests.  Rebuild configure script using
	autoconf 2.59.

2005-05-15  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/info.c:
	* nsd/nsmain.c:
	* nscp/nscp.c: Remove redundant Ns_InfoLabel(). Use Ns_InfoTag() instead.

	* include/ns.h: Bump version to 4.99.0 alpha.

	* include/ns.h:
	* nscp/nscp.c:
	* nsd/adpeval.c:
	* nsd/conn.c:
	* nsd/driver.c:
	* nsd/info.c:
	* nsd/init.tcl:
	* nsd/sock.c:
	* nsd/tclinit.c:
	* nsd/tcljob.c:
	* nsd/tclmisc.c:
	* nsd/tclset.c:
	* nsd/urlopen.c:
	* nsthread/nsthreadtest.c: Silence some compiler warnings.

	* nsd/tcljob.c:
	* nsd/tclobjv.c:
	* nsd/tclxkeylist.c:
	* nsd/unix.c: Hide global symbols which shouldn't be exported.

	* Makefile: Add new "checkexports" target which prints out a list
	of global symbols which shouldn't be.

2005-05-14  Stephen Deasey  <sdeasey@users.sf.net>

	* tcl/nsdb.tcl:
	* nsdb/util.tcl:
	* nsdb/Makefile: Move nsdb module's Tcl file into module directory
	and add to module shared Tcl install target.

	* nsperm/Makefile: Use new TCL variable to install shared Tcl
	files.

	* include/Makefile.module.in: Add new MODNAME and TCL Makefile
	variables which modules can use to specify a list of shared tcl
	files to install.

2005-05-13  Stephen Deasey  <sdeasey@users.sf.net>
